# buildH

./: .gitignore  .readthedocs.yml  .zenodo.json  AUTHORS  CHANGELOG  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOPC_protonated_head_only.gro  LICENSE  LICENSE.txt  Makefile  OP.py  OUT.buildH.correct.1POPC  POPC.gro  POPC_protonated.gro  README.md  TODO  add_hydrogens.py  buildH_calcOP.py  carbon_test.gro  codemeta.json  core.py  dic_lipids.py  ffgmx2.hdb  geometry.py  hydrogens.py  popc407.tpr  popc_endCONF.gro  popc_start.gro  requirements.txt  setup.cfg  setup.py  subroutine_add_hydrogen.f  subroutine_add_hydrogen.py  writers.py
.github/workflows/: archive-to-software-heritage.yml  buildh.yml  code.yml  docs.yml  publish-to-pypi.yml
Berger_POPC_test_case/: OUT.buildH.1POPC.pdb.apineiro_style.out  OUT.buildH.1POPC.pdb.jmelcr_style.out  OUT.buildH.popc0-25ns_dt1000.xtc.apineiro_style.out  OUT.buildH.start_128popc.pdb.apineiro_style.out  OUT.buildH.start_128popc.pdb.jmelcr_style.out  README.md
CHARMM36_POPC_validation/full_traj/: OUT_apineiro_traj_POPC_woH_50_300ns.xtc.IGNH.out  OUT_buildH_traj_POPC_woH_50_300ns.xtc.jmelcr_style.out
binder/: environment.yml  postBuild
buildh/: UI.py  __init__.py  cli.py  core.py  geometry.py  hydrogens.py  init_dics.py  lipids.py  utils.py  writers.py
buildh/lipids/: Berger_CHOL.json  Berger_DOPC.json  Berger_DPPC.json  Berger_POPE.json  Berger_POPS.json  (+5 more)
def_files/: Berger_CHOL.def  Berger_DOPC.def  Berger_DPPC.def  Berger_POPE.def  Berger_POPS.def  CHARMM36UA_DPPC.def  GROMOS53A6L_DPPC.def  GROMOSCKP_POPS.def  README.md
devtools/: RELEASE.md  bumpversion.cfg  install_dev.md
docs/: README.md  algorithms.rst  algorithms_Hbuilding.md  api_reference.rst  buildh.md  command_line_options.md  conf.py  def_format.md  index.rst  installation.md  json_format.md  order_parameter.md  tutorials.rst  usage.md
paper/: paper.bib  paper.md
test_cases/: OUT.buildH.correct.1POPC.pdb.out.jmelcr_style  OUT.buildH.correct.1TO_1POPC.pdb.out.apineiro_style  OUT.buildH.correct.popc0-25ns_dt1000.xtc  OUT.buildH.correct.popc0-25ns_dt1000.xtc.out.apineiro_style  OUT.buildH.correct.popc0-25ns_dt1000.xtc.out.jmelcr_style  OUT.buildH.correct.popc_3frames.xtc.out.apineiro_style  OUT.buildH.correct.popc_3frames.xtc.out.jmelcr_style  OUT.buildH.correct.popc_start.pdb.out.apineiro_style  OUT.buildH.correct.popc_start.pdb.out.jmelcr_style  popc0-25ns_dt1000.xtc
tests/: test_UI.py  test_cli.py  test_core.py  test_dics.py  test_geometry.py  test_hydrogens.py  test_lipids.py  test_utils.py  test_writers.py
validation_CHARMM36/: OUT_apineiro_prog_start.gro.IGNH.out  OUT_buildH_start_woH.pdb.apineiro_style.out  OUT_buildH_start_woH.pdb.jmelcr_style.out  order_parameter_definitions_MODEL_CHARMM36_popc.def  report_buildH.ipynb
(+57 files in other folders)
