[metadata]
name = buildh
version = {version}
author = Hubert Santuz, Amélie Bâcle, Pierre Poulain, Patrick Fuchs
author_email = patrick.fuchs@u-paris.fr
url = https://github.com/patrickfuchs/buildH
description = Build hydrogen atoms from united-atom molecular dynamics of lipids and calculate the order parameters.
long_description = file: README.md, CHANGELOG.md, LICENSE.txt
long_description_content_type = text/markdown
keywords = lipds, order parameters, united atom, molecular dynamics simulation
license = BSD 3-Clause License
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Chemistry
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = find:
zip_safe = False
python_requires= >=3.6 <=3.8
install_requires =
    numpy
    pandas
    MDAnalysis
    numba

[options.package_data]
* = LICENSE.txt, CHANGELOG.md
buildh = lipids/*.json

[options.extras_require]
test =
    pytest

[options.entry_points]
console_scripts =
    buildH = buildh.UI:entry_point
